<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/dp20"
    android:paddingRight="@dimen/dp20"
    android:paddingTop="@dimen/dp5"
    android:paddingBottom="@dimen/dp15"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/message_dialog_border_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp22"
            android:padding="10dp"
            android:textColor="@color/dialog_title_text_color"
            android:text="@string/dialog_update_password_title"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:id="@+id/image_fork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp15"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/close"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:textSize="@dimen/dp16"
        android:text="@string/dialog_update_password_notice"
        android:textColor="@color/dialog_title_text_color"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp16"
        android:text="@string/dialog_update_password_new"
        android:textColor="@color/dialog_title_text_color"/>

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:padding="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:hint="@string/dialog_update_password_edittext_hint"
        android:maxLength="10"
        android:textCursorDrawable="@drawable/color_cursor"
        android:background="@drawable/dialog_update_password_edittext_backgroud_selector"
        android:textSize="@dimen/dp16"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp16"
        android:text="@string/dialog_update_password_new_confirm"
        android:textColor="@color/dialog_title_text_color"/>

    <EditText
        android:id="@+id/et_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:padding="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:hint="@string/dialog_update_password_edittext_hint"
        android:maxLength="10"
        android:textCursorDrawable="@drawable/color_cursor"
        android:background="@drawable/dialog_update_password_edittext_backgroud_selector"
        android:textSize="@dimen/dp16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginTop="@dimen/dp5"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dialog_update_password_button_cancel"
            android:textColor="@color/dialog_title_text_color"
            android:background="@drawable/dialog_button_cancel_shape"/>

        <View
            android:layout_width="@dimen/dp5"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dialog_update_password_button_confirm"
            android:textColor="@color/whiteColor"
            android:layout_marginLeft="@dimen/dp5"
            android:background="@drawable/dialog_xunxi_button_shape"/>
    </LinearLayout>

</LinearLayout>