<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp15"
    android:background="@drawable/message_dialog_border_bg">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/dp20"
        android:padding="10dp"
        android:textColor="@color/dialog_title_text_color"
        android:text="@string/dialog_notification_off_line"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginTop="@dimen/dp5"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/dp15"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginTop="@dimen/dp15"
        android:gravity="center_vertical"
        android:text="@string/dialog_notification_off_line_message"
        android:textColor="@color/dialog_title_text_color"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_quit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp5"
            android:text="@string/dialog_notification_login_quit"
            android:textColor="@color/dialog_title_text_color"
            android:background="@drawable/dialog_button_cancel_shape"/>

        <View
            android:layout_width="@dimen/dp5"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button_login_again"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"
            android:text="@string/dialog_notification_login_again"
            android:textColor="@color/whiteColor"
            android:background="@drawable/dialog_xunxi_button_shape"/>
    </LinearLayout>

</LinearLayout>