<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/message_dialog_border_bg"
    android:padding="@dimen/dp15">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp20"
            android:textColor="@color/dialog_title_text_color"
            android:padding="10dp"
            android:text="@string/dialog_exit_or_register_title"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:id="@+id/image_fork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp15"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/close_gray"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_marginTop="@dimen/dp5"
        android:layout_marginBottom="@dimen/dp5"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginBottom="@dimen/dp15"
        android:layout_marginLeft="@dimen/dp15"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/dialog_exit_or_register_message"
        android:textColor="@color/dialog_title_text_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bn_confirm_leave"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/dp5"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_xunxi_button_shape"
            android:text="@string/dialog_exit_or_register_leave"
            android:textColor="@color/whiteColor" />

        <View
            android:layout_width="@dimen/dp5"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/bn_continue_registation"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/public_dialog_bn_cancel_bgn"
            android:text="@string/dialog_exit_or_register_continue"
            android:textColor="@color/dialog_title_text_color" />
    </LinearLayout>
</LinearLayout>