<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/message_dialog_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_title_background_shape">

        <TextView
            android:id="@+id/tv_qqcp_kszz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/qqcp_kszz"
            android:textColor="@color/public_dialog1_title_text"
            android:textSize="@dimen/dp20" />

        <ImageView
            android:id="@+id/iv_qqcp_window_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/dp15"
            android:scaleType="centerCrop"
            android:src="@mipmap/close_white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp15"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp5">

            <TextView
                android:id="@+id/tv_qqcp_zzh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingStart="@dimen/dp8"
                android:text="@string/qqcp_zzh"
                android:textColor="@color/dialog_title_text_color" />

            <TextView
                android:id="@+id/tv_qqcp_qqcp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingStart="@dimen/dp8"
                android:text=""
                android:textColor="@color/dialog_title_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_qqcp_loading1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/qqcp_windowd_maincolor_shape"
                android:gravity="center"
                android:text="@string/qqcp_loading"
                android:textColor="@color/public_dialog1_left_button" />

            <View
                android:layout_width="@dimen/dp10"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_qqcp_loading2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/qqcp_windowd_maincolor_shape"
                android:gravity="center"
                android:text="@string/qqcp_loading"
                android:textColor="@color/public_dialog1_left_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/key_layout_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_qqcp_zzje"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:gravity="start|center_vertical"
                android:paddingTop="@dimen/dp8"
                android:text="@string/qqcp_zzje"
                android:textColor="@color/dialog_title_text_color" />

            <EditText
                android:id="@+id/et_qqcp_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:background="@drawable/qqcp_windowd_maincolor_shape"
                android:digits="1234567890"
                android:hint="@string/qqcp_edittext_hint"
                android:inputType="number"
                android:lines="1"
                android:maxLength="10"
                android:paddingStart="@dimen/dp10"
                android:textColor="@color/hint"
                android:textColorHint="@color/login_exittext_notfocus_textcolor"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/dp15"
                android:textStyle="normal"
                android:typeface="normal" />

            <View
                android:id="@+id/view_sp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp20" />

            <android.inputmethodservice.KeyboardView
                android:id="@+id/keyboard_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/public_dialog1_generate"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:keyBackground="@drawable/btn_keyboard_key"
                android:keyTextColor="@color/white"
                android:paddingBottom="@dimen/dp20"
                android:paddingTop="@dimen/dp20"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45">

            <Button
                android:id="@+id/bn_qqcp_jryx"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/qqcp_bn_jryx_bgn_shape"
                android:gravity="center"
                android:text="@string/qqcp_jryx"
                android:textColor="@color/public_dialog1_left_button"
                android:textSize="@dimen/dp14" />

            <View
                android:layout_width="@dimen/dp10"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/bn_qqcp_qrsc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/qqcp_bn_qrsc_bgn_shape"
                android:text="@string/qqcp_qrsc"
                android:textColor="@color/public_dialog_right_button"
                android:textSize="@dimen/dp14" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>