<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/message_dialog_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp49"
        android:background="@drawable/title_color">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/dialog_title_xinxi"
            android:textColor="@color/white"
            android:textSize="@dimen/sp17" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:padding="@dimen/dp15"
            android:src="@mipmap/close_white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/msg_no_read"
        android:textColor="#000"
        android:textSize="@dimen/sp16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_marginLeft="@dimen/dp25"
        android:layout_marginRight="@dimen/dp25"
        android:background="#E4E4E4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp70"
            android:gravity="center"
            android:lineSpacingMultiplier="1.3"
            android:textColor="#7f000000"
            android:textSize="@dimen/dp14" />

        <TextView
            android:id="@+id/open"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_marginBottom="@dimen/dp15"
            android:layout_marginLeft="@dimen/dp25"
            android:layout_marginRight="@dimen/dp25"
            android:background="@drawable/sure_bg"
            android:gravity="center"
            android:text="@string/ck"
            android:textColor="#fff"
            android:textSize="@dimen/sp16" />
    </LinearLayout>
</LinearLayout>
